metadata operations